# atx-sys

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.c
cmake/: cmocka.cmake  fix_include.cmake  http-parser.cmake  import_functions.cmake  libubootenv.cmake  mongoose.cmake  swupdate.cmake
include/altronix/: atxsys.h  atxupdate.h
src/: CMakeLists.txt  atxsys.c  atxupdate.c  config.h  containers.h  env.h  env_emu.c  env_uboot.c  http.c  http.h  http_route_about.c  http_route_about.h  http_route_env.c  http_route_env.h  http_route_kill.c  http_route_kill.h  http_route_network.c  http_route_network.h  http_route_update.c  http_route_update.h  json.c  json.h  log.h  network_management.c  network_management.h  print_network_interface.c  print_network_interface.h  private.h  sys.c  sys.h  updater.h  updater_emu.c  updater_swupdate.c
test/_mocks/file/: CMakeLists.txt  containers.h  main.c  mock_file.c  mock_file.h
test/_mocks/mongoose/: CMakeLists.txt  main.c  mongoose_mock.c  mongoose_mock.h  parse_http.c  parse_http.h
test/_mocks/ubootenv/: CMakeLists.txt
test/env/: CMakeLists.txt  main.c
test/http/: CMakeLists.txt  main.c
test/json/: CMakeLists.txt  main.c
test/mocks/libubootenv/: CMakeLists.txt  containers.h  libubootenv.c  libubootenv.h
test/mocks/ubootenv/: CMakeLists.txt  klist.h
test/network_management/: CMakeLists.txt  main.c
test/route_env/: CMakeLists.txt  main.c
test/route_network/: CMakeLists.txt  main.c
test/runner/: CMakeLists.txt  runner.sh
